[tool.poetry]
name = "tisch"
version = "0.1.0"
description = ""
authors = ["Finnkauski <iwiivi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
